--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "triangles",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Delaunay triangulation + Lambertian reflectance",
-  "main": "triangles.js",
+  "main": "js/triangles.min.js",
   "directories": {
     "example": "examples"
+  },
+  "dependencies": {
+    "uglify-js": "~2.2.5"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
