--- a/bower.json
+++ b/bower.json
@@ -1,9 +1,10 @@
 {
-  "name": "triangles",
-  "version": "1.0.0",
+  "name": "triangles.js",
+  "version": "2.0.0",
   "homepage": "https://msurguy.github.io/triangles",
   "authors": [
-    "Maksim Surguy"
+    "Maksim Surguy",
+    "Max Karpawich"
   ],
   "description": "Delaunay triangulation + Lambertian reflectance",
   "main": "js/triangles.js",
